# querion

./: .env.example  .env.production  .gitignore  CLAUDE.md  DAC_TA_CHUC_NANG.md  README.md  backup_utf8.sql  cau-truc.txt  docker-compose.yml  features-scan.txt  run_curl.sh  start.bat  start.ps1  stop.bat  stop.ps1  test_sse.sh
apps/api/: Dockerfile  alembic.ini  check_nodes.py  check_routes.py  fix_check_node.py  fix_row_mapping.py  fix_submit_node.py  pyproject.toml  sample_students.csv  setup_teaching_survey.py  test_rq.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_workspaces.py  0002_users_and_memberships.py  0003_datasets_and_documents.py  0004_ai_providers_chunks_embeddings.py  0005_conversations_messages.py  0006_workflows.py  0007_workflow_type.py  0008_apps_runs.py  0009_students_publish.py  0010_app_dataset.py  0011_conversation_student.py  0012_conv_dataset_nullable.py  0013_aiprovider_purpose.py
apps/api/app/: config.py  db.py  deps.py  main.py  seed.py  storage.py
apps/api/app/auth/: deps.py  security.py
apps/api/app/models/: __init__.py  ai_provider.py  app.py  chunk.py  conversation.py  dataset.py  document.py  embedding.py  message.py  model_registry.py  run.py  student.py  survey.py  user.py  user_workspace.py  workflow.py  workspace.py
apps/api/app/routers/: apps.py  auth.py  chat.py  datasets.py  documents.py  health.py  members.py  providers.py  retrieval.py  student_auth.py  students.py  survey.py  users.py  workflows.py  workspaces.py
apps/api/app/schemas/: datasets.py
apps/api/app/services/: chat.py  (+6 more)
(+115 files in other folders)
