[project]
name = "querion-api"
version = "0.1.0"
description = "Querion API — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "python-multipart>=0.0.9",
    "minio>=7.2.0",
    "redis[hiredis]>=5.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "rq>=1.16.0",
    "pgvector>=0.3.0",
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "langchain-text-splitters>=0.2.0",
    "google-genai>=1.0.0",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
